--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,12 +22,24 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+}
+body {
   min-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
